# KnightOnline-1068

./: .gitignore  CMakeLists.txt  Zones_export.csv  build-client.ps1  build-launcher.ps1  build-uie.ps1  build-warfare.ps1  build.ps1  build_log.txt  import-csv-data.ps1  import-magic-types.ps1  setup-database.ps1
1097 Client/: Launcher.ini  Log.txt  Option.Ini  Server.ini
1097 Client/Data/: Item_Ext_0.tbl.tmp  Zones.tbl  Zones.tbl.csv  Zones.tbl.tmp
1097 Client/WarFare.tlog/: CL.command.1.tlog  CL.write.1.tlog  WarFare.lastbuildstate
CheckUiMissing/: Program.cs
Client Source Code/Common Control/: PropertyList.h
Client Source Code/N3BASE/: BitMapFile.cpp  BitMapFile.h  DFont.cpp  DFont.h  LogWriter.cpp  My_3DStruct.h  N3AlphaPrimitiveManager.cpp  N3AlphaPrimitiveManager.h  N3AnimControl.h  N3AnimKey.cpp  N3AnimKey.h  N3Base.cpp  N3Base.h  N3BaseFileAccess.cpp  N3Board.cpp  N3Board.h  N3Camera.cpp  N3Camera.h  N3Chr.cpp  N3Chr.h  N3Cloak.cpp  N3Cloak.h  N3Cloud.cpp  N3Cloud.h  N3ColorChange.cpp  N3Eng.cpp  N3Eng.h  N3EngTool.cpp  N3EngTool.h  N3FXBundle.h  N3FXGroup.h  N3FXPMeshInstance.cpp  N3FXPartBase.h  N3FXPartBillBoard.cpp  N3FXPartBillBoard.h  N3FXPartBottomBoard.cpp  N3FXPartBottomBoard.h  N3FXPartMesh.h  N3FXParticle.cpp  N3FXPlug.cpp  (+88 more)
Client Source Code/N3CE/: DlgChrProperty.cpp  FormViewAnimation.cpp  FormViewAnimation.h  FormViewProperty.cpp  FormViewTool.cpp  MainFrm.cpp  N3CE.sln  N3CE.vcxproj  N3CE.vcxproj.filters  N3CEDoc.cpp  N3CEView.cpp  PosDummy.cpp  StdAfx.h  TransDummy.cpp  TransDummy.h  UpgradeLog.htm
Client Source Code/N3FE/: DlgBrowsePath.cpp  DlgRename.cpp  FormViewControl.cpp  MainFrm.cpp  N3FEDoc.cpp  N3FEView.cpp
Client Source Code/N3FXE/: DlgEditFxg.cpp  DlgEditPartBillBoard.cpp  DlgEditPartGround.cpp  DlgEditPartMesh.cpp  DlgEditPartParticle.cpp  DlgEditScript.cpp  Ground.cpp  Ground.h  MainFrm.cpp
Client Source Code/N3Indoor/: DlgBase.cpp  DlgBrowsePath.cpp  DlgSceneGraph.h  DlgShapeList.cpp  DlgShapeList.h  DlgUnusedFiles.cpp  FloorDlg.cpp  MainFrm.cpp  MainFrm.h  N3Indoor.cpp  N3IndoorView.cpp  N3IndoorView.h  OrganizeView.cpp  OrganizeView.h  PVSManager.cpp  PVSManager.h  PortalVol.cpp  PortalVol.h  PortalVolume.cpp  PortalVolume.h  PortalWall.cpp  PosDummy.cpp  PvsMgr.cpp  PvsMgr.h  RotDummy.cpp  ShapeTypeDlg.cpp  SwappedDummy.cpp  TransDummy.cpp  TransDummy.h
Client Source Code/N3ME/: DTex.cpp  DTexGroup.cpp  DTexGroupMng.cpp  DTexGroupMng.h  DTexMng.cpp  DTexMng.h  DlgAddSoundGroup.cpp  DlgBar.cpp  DlgBase.cpp  DlgDTexGroupView.cpp  DlgDTexGroupView.h  DlgEditWarp.cpp  DlgFolderSelect.cpp  DlgLight.cpp  DlgMakeNPCPath.cpp  DlgPondProperty.cpp  DlgRegenUser.cpp  DlgRiverProperty.cpp  DlgSceneGraph.cpp  DlgSceneGraph.h  DlgSetDTex.cpp  DlgSetDTex.h  DlgShapeList.h  DlgSowSeed.cpp  DlgUnusedFiles.cpp  EventCell.cpp  EventMgr.cpp  EventMgr.h  LightObjMgr.cpp  LightObjMgr.h  LyTerrain.cpp  LyTerrain.h  LyTerrainDef.h  MainFrm.cpp  MapMng.cpp  MapMng.h  N3MEDoc.cpp  N3MEView.cpp  NPCPath.cpp  NPCPath.h  (+34 more)
Client Source Code/N3Server/: CircularBuffer.h  Define.h  EbenezerDlg.cpp  IOCPSocket2.cpp  Map.cpp
Client Source Code/N3TexViewer/: DlgFormat.cpp  MainFrm.cpp  N3TexViewerDoc.cpp  ProgressBar.cpp
Client Source Code/N3Viewer/: DlgPMeshEdit.cpp  MainFrm.cpp  N3ViewerDoc.cpp  N3ViewerView.cpp  N3ViewerView.h  ShellTree.cpp  ViewProperty.cpp  ViewSceneTree.cpp
Client Source Code/Option/: Option.sln  Option.vcxproj  Option.vcxproj.filters  OptionDlg.cpp  OptionDlg.h
Client Source Code/PlugIn_Max/: My_3DStruct.h  N3DExp.cpp  N3DExp.h  StdAfx.h
Client Source Code/PlugIn_Maya/: N3E2Wrapper.cpp  N3E2Wrapper.h
Client Source Code/RscTables/: RscTablesDlg.cpp  TableGenerator.cpp  TableGenerator.h
Client Source Code/ServerInfoViewer/: MainFrm.cpp  ServerInfoViewerDoc.h  ServerInfoViewerView.cpp
Client Source Code/SkyViewer/: FormViewProperty.cpp  MainFrm.cpp  SkyViewerView.cpp
Client Source Code/UIE/: DlgBar.cpp  DlgChangeImage.cpp  DlgTexture.cpp  DlgTexture.h  HierarchyView.cpp  HierarchyView.h  MainFrm.cpp  PropertyView.cpp  PropertyView.h  StdAfx.h  TexViewer.cpp  TexViewer.h  UIE.cpp  UIE.rc  UIE.sln  UIE.vcxproj  UIE.vcxproj.filters  UIEDoc.cpp  UIEDoc.h  UIEView.cpp  UIEView.h
Client Source Code/WarFare/: GameBase.cpp  GameDef.h  GameEng.h  GameProcCharacterSelect.cpp  GameProcCharacterSelect.h  GameProcLogIn.cpp  GameProcMain.cpp  GameProcedure.cpp  Log.txt  (+63 more)
KNIGHT ONLINE/Aujard/: CMakeLists.txt  StdAfx.h
KNIGHT ONLINE/Ebenezer/: BaseItemTableSet.cpp  CMakeLists.txt  CharBaseAbilityTableSet.cpp  EventSet.cpp  HomeSet.cpp  ItemLevelTableSet.cpp  Knights.cpp  KnightsRankSet.cpp  KnightsUserSet.cpp  LevelUpTableSet.cpp  MagicTableSet.cpp  MagicType2Set.cpp  MagicType3Set.cpp  MagicType4Set.cpp  MagicType5Set.cpp  MagicType8Set.cpp  StoreInfoTableSet.cpp  ZoneInfoSet.cpp
KNIGHT ONLINE/GameServer/: CMakeLists.txt  MAP.cpp  MagicTableSet.cpp  MagicType1Set.cpp  MagicType2Set.cpp  MagicType3Set.cpp  MagicType4Set.cpp  MakeDefensiveTableSet.cpp  MakeGradeItemTableSet.cpp  MakeItemTableSet.cpp  MakeLareItemTableSet.cpp  MakeWeaponTableSet.cpp  MonPosSet.cpp  MonTableSet.cpp  Npc.cpp  NpcItemSet.cpp  NpcPosSet.cpp  NpcTableSet.cpp  RNpcPosSet.cpp  STLMap.h  ZoneInfoSet.cpp
KNIGHT ONLINE/LogInServer/: BigFile.cpp  BigFile.h  CMakeLists.txt  DBProcess.cpp  STLMap.h  ShellTree.cpp  StdAfx.h  VersionSet.cpp
Server Source Codes/Aujard/: CMakeLists.txt  DBAgent.cpp  ItemTableSet.cpp  STLMap.h
Server Source Codes/Ebenezer/: BattleSet.cpp  CMakeLists.txt  CharacterDataSet.cpp  CoefficientSet.cpp  EbenezerDlg.cpp  EventSet.cpp  HomeSet.cpp  ItemGroupSet.cpp  ItemTableSet.cpp  KnightsManager.cpp  KnightsRankSet.cpp  KnightsSet.cpp  KnightsSet.h  KnightsUserSet.cpp  LevelUpTableSet.cpp  MagicTableSet.cpp  MagicType1Set.cpp  MagicType2Set.cpp  MagicType3Set.cpp  MagicType4Set.cpp  MagicType5Set.cpp  MagicType8Set.cpp  Map.cpp  PreFix1TableSet.cpp  PreFix2TableSet.cpp  Server.ini  SkillTableSet.cpp  StdAfx.h  ZoneInfoSet.cpp
Server Source Codes/Ebenezer/Debug/: server.ini
TblCli/: Program.cs  UIs.csv
scripts/: setup_db.ps1
(+310 files in other folders)
